Change title and add project description in header
Updated the title and added a project description in the header.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazone</title>
+    <title>Amazone-UI-Clone-educational-project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel = "stylesheet" href = "ama.css">
 </head>
 <body>
     <header>
+        <div style="background:#ffcc00;padding:10px;text-align:center;font-weight:bold;">
+            This is a frontend practice project (Amazon UI Clone). Not an official Amazon website.
+        </div>
         <div class = "navbar">
             <div class = "nav-logo border">
                 <div class = "logo"></div>
